--- a/research.html
+++ b/research.html
@@ -37,13 +37,14 @@
 
 									<hr class="major" />
 
-									<h2>Working Papers</h2>
-									<p>Fatou Thioune, Giorgia Albertin, Romina Kazandjian, and <b>Tianyuan Wang</b>. "Macro-critical Impact of COVID-19 on Gender Inequality in SACU Region." Fouthcoming IMF Working Paper.</p>
+									<h2>Publications</h2>
+									<p>Giorgia Albertin, Romina Kazandjian, Fatou K Thioune, and <b>Tianyuan T. Wang</b>. (2024). Chapter 4 COVID-19 and Gender Inequality: Impact in Southern Africa. In Gender Equality and Economic Development in Sub-Saharan Africa. International Monetary Fund. https://www.elibrary.imf.org/display/book/9798400246968/CH004.xml
+									</p>
 
 									<hr class="major" />
 
 									<h2>Work in Progress</h2>
-									<p> “Government R&D and Climate Change Technologies” with Dr. Susana Ferreira (advisor).</p>
+									<p> “Government R&D and Climate Change Technologies”</p>
 
 									<hr class="major" />
 
